[gd_scene load_steps=4 format=3 uid="uid://d0u6elr51xgrg"]

[ext_resource type="Script" uid="uid://racsx4pqvea8" path="res://Windows/Winwoes/winwoes_update.gd" id="1_vm041"]

[sub_resource type="Gradient" id="Gradient_vm041"]
colors = PackedColorArray(0.52112937, 0.54998416, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yv2r7"]
gradient = SubResource("Gradient_vm041")
fill = 1
fill_from = Vector2(0.15962441, 0.86384976)

[node name="Winwoes" type="Window"]
oversampling_override = 1.0
position = Vector2i(7, 31)
size = Vector2i(350, 200)

[node name="WinwoesUpdate" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_yv2r7")
script = ExtResource("1_vm041")

[node name="ProgressBar" type="ProgressBar" parent="WinwoesUpdate"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -13.5
offset_right = -8.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
max_value = 30.0

[node name="Label" type="Label" parent="WinwoesUpdate"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.5
offset_top = -71.5
offset_right = 150.5
offset_bottom = -22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Updates available: 
Your PC will restart automatically"

[node name="Remind" type="Button" parent="WinwoesUpdate"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.5
offset_top = -56.0
offset_right = 70.5
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
text = "Remind Me Later"

[connection signal="close_requested" from="." to="WinwoesUpdate" method="_on_winwoes_close_requested"]
[connection signal="pressed" from="WinwoesUpdate/Remind" to="WinwoesUpdate" method="_on_remind_pressed"]
